# donna

./: .gitignore  404.html  CLAUDE.md  IMPLEMENTATION_GUIDE.md  INSTALL_DAY.md  README.md  RECOVERY.md  SETUP.md  VERIFICATION_REPORT.md  alembic.ini  donna-diagrams.html  index.html  mkdocs.yml  objects.inv  properdocs.yml  pyproject.toml  sitemap.xml  spec_v3.md
.claude/: settings.json
.claude/agents/: security-reviewer.md  spec-drift-checker.md
.github/workflows/: ci.yml  docs.yml
alembic/: env.py
alembic/versions/: 407d0bc1f407_add_chat_action_columns.py  42bdc9502b1b_merge_chat_context_budget_heads.py  6c29a416f050_initial_schema.py  933f74c55f24_add_tasks_time_intent_json.py  9c6cfd1afb9c_merge_reply_handler_and_immich_nullable_.py  a1b2c3d4e5f0_add_reply_handler_tables.py  a1b2c3d4e5f7_claude_code_mode_columns.py  a3b4c5d6e7f8_automation_active_cadence.py  a7b8c9d0e2f3_automation_gpu_model_preferred_window.py  add_auth_tables.py  add_automation_state_blob.py  add_automation_tables_phase_5.py  add_calendar_mirror.py  add_calendar_mirror_user_id.py  add_chat_tables.py  add_context_budget_columns.py  add_fixture_tool_mocks.py  add_lifecycle_tables_phase_3.py  add_llm_gateway_columns.py  add_manual_draft_at.py  add_nudge_events_and_task_stats.py  add_payload_path_to_invocation_log.py  add_skill_run_tables_phase_2.py  add_skill_system_phase_1.py  add_sms_escalation.py  add_trace_id_columns.py  b1c2d3e4f5a6_add_overdue_thread_map.py  b2c3d4e5f6a8_tool_request.py  b4c5d6e7f8a9_automation_unique_user_name.py  b7c8d9e0f1a2_capability_tools_json.py  b9d2e4f6a135_add_skill_id_to_invocation_log.py  c3d4e5f6a7b9_add_user_profile_columns.py  c5d6e7f8a9b0_skill_candidate_report_reasoning.py  c7d8e9f0a1b2_escalation_core.py  c8e1f2a3b4d5_parse_task_drop_user_id.py  c9d1e3f5a7b2_add_calendar_mirror_attendees.py  d2e3f4a5b6c7_bigint_overdue_thread.py  d6e7f8a9b0c1_seed_claude_native_capability.py  d8e9f0a1b2c3_escalation_workspace_columns.py  e1f2a3b4c5d6_merge_heads_for_wave3.py  (+15 more)
architecture/: index.html
architecture/component-map/: index.html
architecture/data-flow/: index.html
architecture/overview/: index.html
capabilities/email_triage/: input_schema.json
capabilities/news_check/: input_schema.json
config/: agents.yaml  auth.yaml  automations.yaml  calendar.yaml  capabilities.yaml  chat.yaml  chat_actions.yaml  chat_tools.yaml  dashboard.yaml  discord.yaml  donna_models.yaml  email.yaml  index.html  llm_gateway.yaml  manual_escalation.yaml  memory.yaml  notifications.yaml  output_formats.yaml  preferences.yaml  reply_actions.yaml  reply_intents.yaml  skills.yaml  sms.yaml  task_states.yaml  task_types.yaml
config/SUMMARY/: index.html
config/agents/: index.html
config/auth/: index.html
config/calendar/: index.html
development/: index.html
docker/: .env.example  Dockerfile.api  Dockerfile.healthwatch  Dockerfile.orchestrator  donna-app.yml  donna-core.yml  donna-monitoring.yml  donna-ollama.yml  donna-ui.yml  donna-vault.yml
docs/: AI_ENGINEER_PORTFOLIO_REPORT.md  agents.md  architecture.md  changelog.md  feature-map.md  glossary.md  index.md  management-gui.md  model-layer.md  notifications.md  observability.md  phase-1-skill-system-setup.md  resilience.md  scheduling.md  task-system.md  troubleshooting.md
domain/: index.html
donna-ui/: .gitignore  CLAUDE.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
operations/: index.html
prompts/: challenge_task.md  challenger_parse.md  classify_priority.md  claude_novelty.md  dedup_check.md  donna_persona.md  extract_preferences.md  format_user_output.md  generate_nudge.md  generate_reminder.md  morning_digest.md  parse_task.md  prep_research.md  quality_judge.md  reply_intent.md  skill_auto_draft.md  skill_equivalence_judge.md  skill_evolution.md  task_decompose.md  weekly_digest.md
reference/: index.html
reference-specs/: index.html
schemas/: challenge_output.json  challenger_parse.json  chat_intent_output.json  chat_respond_output.json  chat_summarize_output.json  claude_novelty.json  decompose_output.json  dedup_output.json  digest_output.json  draft_daily_reflection.json  draft_meeting_note.json  draft_person_profile.json  draft_weekly_review.json  escalation_submission.json  escalation_summary_output.json  extract_commitments.json  extract_preferences_output.json  format_user_output.json  index.html  nudge_output.json  prep_output.json  priority_output.json  reminder_output.json  reply_intent_output.json  skill.json  skill_auto_draft_output.json  skill_equivalence_output.json  skill_evolution_output.json  task_parse_output.json  weekly_digest_output.json
scripts/: bootstrap.sh  dev_tool_call.py  donna-deploy.sh  donna-down.sh  donna-up.sh  eval_driver_standalone.py  gen_ref_pages.py  move-docker-root.sh  supabase_keepalive.sh  watchdog.sh
search/: search_index.json
slices/: slice_00_scaffold.md  slice_01_database.md  slice_02_model_parsing.md  slice_03_discord.md  slice_04_calendar.md  slice_05_reminders_digest.md  slice_06_dedup_cost.md  slice_07_sms_escalation.md  slice_08_email_corrections.md  slice_09_observability_backup.md  slice_10_multiuser_api.md  slice_11_flutter_ui.md  slice_12_vault_plumbing.md  slice_13_memory_store_vault_source.md  slice_14_episodic_sources.md  slice_15_template_writes_meeting_notes.md  slice_16_autowrite_cadences_and_rename.md  slice_17_escalation_core.md  slice_18_budget_extension.md  slice_19_dashboard_escalation_workspace.md  slice_20_chat_mode.md  slice_21_claude_code_mode.md  slice_22_tool_gap_surfacing.md  slice_23_dashboard_runtime_overrides.md  slice_24_escalation_hardening.md  slice_25_reescalation_chains.md
start-here/: index.html
systemd/: donna.service
tests/: conftest.py
workflows/: index.html
(+1599 files in other folders)
